# bpasslh

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
bpasslh/: handler.py  util.py
bpasslh/data/: act.csv  nsw.csv  nt2.csv  nz.csv  qld.csv  sa.csv  sa2.csv  tas.csv  vic.csv  wa2.csv
bpasslh/data/shapefiles/PSMA/nt/: NT_STATE_POLYGON_shp.shp  NT_STATE_POLYGON_shp.shx
bpasslh/data/shapefiles/PSMA/ot/: OT_STATE_POLYGON_shp.shp
bpasslh/data/shapefiles/PSMA/qld/: QLD_STATE_POLYGON_shp.dbf
bpasslh/data/shapefiles/PSMA/tas/: TAS_STATE_POLYGON_shp.dbf  TAS_STATE_POLYGON_shp.shx
bpasslh/data/shapefiles/PSMA/wa/: WA_STATE_POLYGON_shp.shp  WA_STATE_POLYGON_shp.shx
sslh/: handler.py  util.py
sslh/data/: sa.csv
sslh/data/shapefiles/PSMA/: README.md
sslh/data/shapefiles/PSMA/nt/: NT_STATE_POLYGON_shp.dbf
sslh/data/shapefiles/PSMA/ot/: OT_STATE_POLYGON_shp.dbf  OT_STATE_POLYGON_shp.shx
sslh/data/shapefiles/PSMA/sa/: SA_STATE_POLYGON_shp.dbf  SA_STATE_POLYGON_shp.shp  SA_STATE_POLYGON_shp.shx
sslh/data/shapefiles/PSMA/vic/: VIC_STATE_POLYGON_shp.dbf  VIC_STATE_POLYGON_shp.shp  VIC_STATE_POLYGON_shp.shx
sslh/data/shapefiles/PSMA/wa/: WA_STATE_POLYGON_shp.dbf
tests/: test_locationgeneralisation.py
