[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bpasslh"
version = "2.1.4"
authors = ["Grahame Bowland <grahame.bowland@qcif.edu.au>"]
description = "Location generalisation for sensitive species"
readme = "README.md"
include = [
    "README.md",
    "LICENSE.txt",
    "bpasslh/sensitive_species/**"
]

[tool.poetry.dependencies]
python = "^3.9"
Shapely = "^1.8.2"
Fiona = "^1.8.21"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
tox = "^3.25.0"
pytest = "^7.1.2"
black = "^22.3.0"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38
isolated_build = True

[testenv]
deps=pytest
commands=pytest
"""

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
